# statezero

./: .gitignore  PLAN_chain_ast_node.md  license.md  manage.py  overview.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
.VSCodeCounter/2026-02-16_17-32-16/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-02-16_19-52-46/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-02-16_19-57-59/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md
.claude/: settings.local.json
.github/workflows/: publish.yml
docs/: index-advisor-spec.md
modelsync/core/: __init__.py  ast_parser.py  ast_validator.py  caching.py  classes.py  config.py  constants.py  event_bus.py  event_emitters.py  exceptions.py  interfaces.py  process_request.py  types.py
ormbridge/core/: __init__.py  ast_parser.py  ast_validator.py  caching.py  classes.py  config.py  context_storage.py  event_bus.py  event_emitters.py  exceptions.py  interfaces.py  process_request.py
statezero/client/: generate.py  runtime_template.py  testing.py
statezero/core/: __init__.py  actions.py  ast_parser.py  ast_validator.py  cache_mixin.py  caching.py  classes.py  config.py  context_storage.py  event_bus.py  event_emitters.py  exceptions.py  field_utils.py  interfaces.py  namespace_utils.py  permission_bound.py  permission_resolver.py  permissions.py  process_request.py  (+4 more)
tests/: settings.py
tickets/: TICKET-001-reverse-relations-in-model-graph.md  TICKET-002-chained-filters-m2m-semantics.md  TICKET-003-fk-as-primary-key-serialization.md  TICKET-003-json-nested-fields
(+185 files in other folders)
