[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "statezero"
version = "0.1.0b47"
description = "Connect your Python backend to a modern JavaScript SPA frontend with 90% less complexity."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Robert", email = "robert.herring@statezero.dev" }
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://www.statezero.dev"
repository = "https://github.com/state-zero/statezero"

[tool.setuptools.packages.find]
where = ["."]
include = ["statezero", "statezero.*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}